--- a/views/domain.ejs
+++ b/views/domain.ejs
@@ -25,7 +25,7 @@
                 <img class="magnet w-[100px] text-2xl" src="/media/logo.png" alt="">
                 <form action="/logout" method="post">
                     <div id="right" class="flex items-center gap-[40px]">
-                        <button type="submit" class="px-3 py-2 bg-gray-300 rounded-xl">Logout</button>
+                        <button type="submit" class="px-3 py-2 bg-gray-300 rounded-xl magnet">Logout</button>
                     </div>
                 </form>
             </div>
