--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,7 +18,7 @@
                 <%= success %>
             </div>
         <% } %>
-        <div class="main h-screen w-full flex ">
+        <div class="main h-screen w-full flex justify-between items-center">
             <div class="left w-[50%] h-full">
                 <div class="form flex flex-col items-center justify-center h-full">
                     <h3 class="mb-5 text-2xl underline">Create your Account</h3>
@@ -33,7 +33,7 @@
                     </form>
                 </div>
             </div>
-            <div class="right w-[50%] h-full">
+            <div class="right h-full">
                     <img class="h-full w-full object-contain" src="/images/cartoon.jpeg" alt="Cartoon holding a board"/>
             </div>
         </div>
