--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="container relative">
+    <div class="container relative selection:bg-fuchsia-300">
         <% if(error && error.length > 0) { %>
             <div class="alert alert-danger fixed top-0 left-1/2 transform -translate-x-1/2 w-96 text-center py-3 px-4 bg-red-500 text-white rounded-b-lg shadow-lg z-50" role="alert">
                 <%= error %>
